feat: add support for native IB weekly and monthly bars
